<resources>
    <string name="app_name">Sudoku Solver</string>
    <string name="resetBoard">Reset Board</string>
    <string name="solveBoard">Solve</string>
    <!-- MenuItems -->
    <string name="settingsItem">Settings</string>
    <string name="aboutItem">About</string>
    <!-- Preference Titles -->
    <string name="application_header">Application</string>
    <string name="sudoku_header">Sudoku</string>
    <!-- Theme Preferences -->
    <string name="app_theme_title">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <!-- Sudoku Preferences -->
    <string name="app_textSize_title">Text Size</string>
    <!-- Language Preferences-->
    <string name="app_language_title">Language</string>
    <string name="system">System</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="japanese">Japanese</string>
    <string name="portuguese">Portuguese</string>
    <string name="italian">Italian</string>
    <string name="persian">Persian</string>
    <string name="polish">Polish</string>
    <string name="hindi">Hindi</string>
    <string name="chinese">Chinese</string>
    <!-- key == locale -->
    <string name="systemKey">system</string>
    <string name="englishKey" translatable="false">en</string>
    <string name="russianKey" translatable="false">ru</string>
    <string name="germanKey" translatable="false">de</string>
    <string name="spanishKey" translatable="false">es</string>
    <string name="frenchKey" translatable="false">fr</string>
    <string name="japaneseKey" translatable="false">ja</string>
    <string name="portugueseKey" translatable="false">pt</string>
    <string name="italianKey" translatable="false">it</string>
    <string name="persianKey" translatable="false">fa</string>
    <string name="polishKey" translatable="false">pl</string>
    <string name="hindiKey" translatable="false">hi</string>
    <string name="chineseKey" translatable="false">zh</string>
    <!-- FieldSize Preferences -->

    <!-- Preferences Key -->
    <string name="prefApplicationThemePrefKey" translatable="false">prefApplicationThemePrefKey</string>
    <string name="prefApplicationLanguagePrefKey" translatable="false">prefApplicationLanguagePrefKey</string>
    <string name="prefSudokuFieldSizePrefKey" translatable="false">prefSudokuFieldSizePrefKey</string>
    <string name="prefTextSizePrefKey" translatable="false">prefTextSizePrefKey</string>
    <!-- About -->
    <string name="copyrightAntonKesy" translatable="false">© Anton Kesy</string>
    <string name="poorskillWebsite" translatable="false">https://www.poorskill.com</string>
    <string name="privacyPolicyURL" translatable="false">https://github.com/PoorSkill/sudokusolver-android/blob/main/store/privacy%20policy/privacy_policy.md</string>
    <string name="sourceCodeURL" translatable="false">https://github.com/PoorSkill/sudokusolver-android</string>
    <string name="reportBugURL" translatable="false">https://github.com/PoorSkill/sudokusolver-android/issues</string>
    <string name="rateAppURL" translatable="false">https://play.google.com/store/apps/details?id=com.poorskill.sudokusolver</string>
    <string name="contactMail" translatable="false">info@poorskill.com</string>
    <string name="settingsTitle">Settings</string>
    <string name="aboutTitle">About</string>
    <string name="website">Website</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="contact">Contact</string>
    <string name="sourceCode">Source Code</string>
    <string name="reportBug">Report Bug</string>
    <string name="rateApp">Rate App</string>
    <string name="version">VERSION</string>


</resources>