<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sudoku_header">
        <!--
                <ListPreference
                    app:defaultValue="9"
                    app:entries="@array/fieldSize_entries"
                    app:entryValues="@array/fieldSize_values"
                    app:key="@string/prefSudokuFieldSizePrefKey"
                    app:title="@string/app_fieldSize_title"
                    app:useSimpleSummaryProvider="true" />-->

        <ListPreference
            app:defaultValue="75"
            app:entries="@array/textSize_entries"
            app:entryValues="@array/textSize_values"
            app:key="@string/prefTextSizePrefKey"
            app:title="@string/app_textSize_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_header">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/prefApplicationThemePrefKey"
            app:title="@string/app_theme_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/systemKey"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/prefApplicationLanguagePrefKey"
            app:title="@string/app_language_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

</PreferenceScreen>